@@ -2257,6 +2257,7 @@ GEN sd_parisizemax(const char *v, long flag);
 GEN sd_path(const char *v, long flag);
 GEN sd_prettyprinter(const char *v, long flag);
 GEN sd_primelimit(const char *v, long flag);
+GEN sd_realbitprecision(const char *v, long flag);
 GEN sd_realprecision(const char *v, long flag);
 GEN sd_secure(const char *v, long flag);
 GEN sd_seriesprecision(const char *v, long flag);
