@@ -230,6 +230,34 @@ sd_realprecision(const char *v, long flag)
 }
 
 GEN
+sd_realbitprecision(const char *v, long flag)
+{
+  pariout_t *fmt = GP_DATA->fmt;
+  if (v)
+  {
+    ulong newnb = ndec2nbits(fmt->sigd);
+    long n;
+    sd_ulong_init(v, "realbitprecision", &newnb, 1, prec2nbits(LGBITS));
+    n = nbits2ndec(newnb);
+    if (fmt->sigd == n) return gnil;
+    if (fmt->sigd >= 0) fmt->sigd = n;
+    if (newnb == precreal) return gnil;
+    precreal = newnb;
+  }
+  if (flag == d_RETURN) return stoi(precreal);
+  if (flag == d_ACKNOWLEDGE)
+  {
+    pari_printf("   realbitprecision = %ld significant bits", precreal);
+    if (fmt->sigd < 0)
+      pari_puts(" (all digits displayed)");
+    else if (nbits2ndec(precreal) != fmt->sigd)
+      pari_printf(" (%ld digits displayed)", fmt->sigd);
+    pari_putc('\n');
+  }
+  return gnil;
+}
+
+GEN
 sd_seriesprecision(const char *v, long flag)
 {
   const char *msg[] = {"significant terms", NULL};
